# torch-custom-ops-cookiecutter

./: .gitignore  README.md  cookiecutter.json  requirements-dev.txt
hooks/: post_gen_project.py
tests/: __init__.py  test_cookiecutter.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: publish-to-pypi.yml  ruff.yml
{{cookiecutter.project_slug}}/src/: README.md  add_one.cu  register_ops.cpp
{{cookiecutter.project_slug}}/src/include/: add_one.h
{{cookiecutter.project_slug}}/test/: __init__.py  conftest.py  test_add_one.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: OPS_README.md  __init__.py  abstract_impls.py  ops.py
